// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component snapshot test should display error message 1`] = `
<Grid
  bsClass="container"
  className="login"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      sm={6}
      smOffset={3}
      xs={12}
    >
      <form>
        <FormGroup
          bsClass="form-group"
          className="align-left"
        >
          <p
            className="error-message"
          >
            test error
          </p>
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Email Address
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="email-input"
            componentClass="input"
            name="email"
            onChange={[MockFunction]}
            placeholder="E.g. john@doe.com"
            type="text"
            value="test@email.com"
          />
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Password
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="password-input"
            componentClass="input"
            name="password"
            onChange={[MockFunction]}
            placeholder="E.g. 124!Jigzx"
            type="password"
            value="testPassword"
          />
          <Button
            active={false}
            block={true}
            bsClass="btn"
            bsStyle="primary"
            className="login-button"
            disabled={false}
            onClick={[MockFunction]}
            type="submit"
          >
            Login
          </Button>
          <div
            className="register-text"
          >
            New to My Saved Recipes? 
            <Link
              replace={false}
              to="/account/register"
            >
              Create an account.
            </Link>
          </div>
        </FormGroup>
      </form>
    </Col>
  </Row>
</Grid>
`;

exports[`Login component snapshot test should match snapshot 1`] = `
<Grid
  bsClass="container"
  className="login"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      sm={6}
      smOffset={3}
      xs={12}
    >
      <form>
        <FormGroup
          bsClass="form-group"
          className="align-left"
        >
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Email Address
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="email-input"
            componentClass="input"
            name="email"
            onChange={[MockFunction]}
            placeholder="E.g. john@doe.com"
            type="text"
            value="test@email.com"
          />
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Password
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="password-input"
            componentClass="input"
            name="password"
            onChange={[MockFunction]}
            placeholder="E.g. 124!Jigzx"
            type="password"
            value="testPassword"
          />
          <Button
            active={false}
            block={true}
            bsClass="btn"
            bsStyle="primary"
            className="login-button"
            disabled={false}
            onClick={[MockFunction]}
            type="submit"
          >
            Login
          </Button>
          <div
            className="register-text"
          >
            New to My Saved Recipes? 
            <Link
              replace={false}
              to="/account/register"
            >
              Create an account.
            </Link>
          </div>
        </FormGroup>
      </form>
    </Col>
  </Row>
</Grid>
`;
